adding some response stuff

--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div style= "text-align:center">
-            <!-- <img src="images/index.png"> -->
+            <img src="images/index.png">
             <p>by Tsiguenz and Aboudjel</p>
         </div>
     </body>
