--- a/html/index_copy.html
+++ b/html/index_copy.html
@@ -21,7 +21,7 @@
     <body style= "text-align:center;background-color:rgb(255, 123, 0);">
         <div>
             <img src="images/index.png">
-            <p>by Tsiguenz and Aboudjel</p>
+            <p>by Tsiguenz, Adben-mc and Aboudjel</p>
             <a href="index.html">Contact</a>
         </div>
     </body>
