preparing html website

--- a/html/errors/error.html
+++ b/html/errors/error.html
@@ -9,4 +9,13 @@
 <!DOCTYPE html><html><head><title>414</title></head><body style="background-color: rgb(0, 0, 0);"><img style="display: block; margin-left: auto; margin-right: auto; width: 50%" src="https://http.cat/414"><p style="text-align: center; margin-left: 30%; margin-right: 30%; color: white">The URI requested by the client is longer than the server is willing to interpret.</p></body></html>
 <!DOCTYPE html><html><head><title>415</title></head><body style="background-color: rgb(0, 0, 0);"><img style="display: block; margin-left: auto; margin-right: auto; width: 50%" src="https://http.cat/415"><p style="text-align: center; margin-left: 30%; margin-right: 30%; color: white">The media format of the requested data is not supported by the server.</p></body></html>
 <!DOCTYPE html><html><head><title>431</title></head><body style="background-color: rgb(0, 0, 0);"><img style="display: block; margin-left: auto; margin-right: auto; width: 50%" src="https://http.cat/431"><p style="text-align: center; margin-left: 30%; margin-right: 30%; color: white">The server is unwilling to process the request because its header fields are too large. The request may be resubmitted after reducing the size of the request header fields.</p></body></html> -->
-<!DOCTYPE html><html><head><title>500</title></head><body style="background-color: rgb(0, 0, 0);"><img style="display: block; margin-left: auto; margin-right: auto; width: 50%" src="https://http.cat/500"><p style="text-align: center; margin-left: 30%; margin-right: 30%; color: white">The server has encountered a situation it does not know how to handle.</p></body></html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>500</title>
+    </head>
+    <body style="background-color: rgb(255, 255, 255);">
+        <img style="display: block; margin-left: auto; margin-right: auto;margin-top: 200px; width: 300px; height: 200px;" src="../images/error_404.jpg">
+        <p style="text-align: center; margin-left: 30%; margin-right: 30%; color: rgb(71, 71, 96)">OUPS ! Cette page de notre super livre de vacance n'est pas disponible.</p>
+    </body>
+</html>
