--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,12 @@
             .dark-mode {
               background-color: rgb(33, 32, 32);
             }
+            background {
+              background-image:url('../images/bg.png');
+              background-repeat:no-repeat;
+              background-size:contain;
+              background-position:center;
+            }
             </style>
     </head>
    
