adding html stuff

--- a/html/post.html
+++ b/html/post.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>                                                                 
+<!-- <!DOCTYPE html>                                                                 
 <html>                                                                          
     <head>                                                                      
         <meta charset="utf-8">                                                  
@@ -10,4 +10,10 @@
             <input type="submit" value="Submit">                                
         </form>                                                                 
     </body>                                                                     
-</html>
+</html> -->
+
+<form action="/action_page.php">
+    <label for="img">Select image:</label>
+    <input type="file" id="img" name="img" accept="image/*">
+    <input type="submit">
+  </form>
