--- a/html/index.html
+++ b/html/index.html
@@ -16,28 +16,27 @@
               font-size: 160%;
             }
             body {
-              background-color: rgb(108, 144, 163);
+                background-image: url(images/background/background_index.png);
+                background-position: center center;
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: cover;
             }
             .dark-mode {
               background-color: rgb(33, 32, 32);
-            }
-            background {
-              background-image:url('../images/bg.png');
-              background-repeat:no-repeat;
-              background-size:contain;
-              background-position:center;
             }
             </style>
     </head>
    
     <body>
+        <div class="background"></div>
         <div style= "text-align:right">
           <button type="button" onclick="changeColor()">Dark mode</button>
         </div>
 
         <div style= "text-align:center">
-            <img src="images/index.png">
-            <p>by Tsiguenz, Adben-mc and Aboudjel</p>
+            <img src="images/index_photo_album.png" style="width: 50%; height: 50%">
+            <!-- <p>by Tsiguenz, Adben-mc and Aboudjel</p> -->
             <a href="index_copy.html">PAGE 2</a>
         </div>
     </body>
