push before crash

--- a/html/post.html
+++ b/html/post.html
@@ -12,8 +12,21 @@
     </body>                                                                     
 </html> -->
 
-<form action="/action_page.php">
+<!-- <form action="/action_page.php">
     <label for="img">Select image:</label>
     <input type="file" id="img" name="img" accept="image/*">
     <input type="submit">
+  </form> -->
+
+<!DOCTYPE html>                                                                 
+<html>
+  <h2 >TEST IT </h2>
+  <form action="" method="post" enctype="multipart/form-data">
+      <h3>Uplaod a file here :</h3>
+          <input type="file" id="myfile" name="myfile"/>
+          <button class="button" type ="submit" >upload</button>
   </form>
+  <h3 >Download the Makefile 
+      <a href="./Makefile" download id="herf">here</a>
+  </h3>
+  </html>
