adding some button on the html

--- a/html/index.html
+++ b/html/index.html
@@ -70,6 +70,10 @@
             <img src="images/index_photo_album.png" style="width: 50%; height: 50%">
             <div class="gap-10"></div> 
             <button class="button-74" onclick="location.href='pages/page1.html'" role="button">nos supers photos</button>
-        </div>
+            <div class="gap-10"></div>
+            <button class="button-74" onclick="location.href='pages/page1.html'" role="button">toi aussi upload ta pic !</button>
+            <div class="gap-10"></div> 
+            <button class="button-74" onclick="location.href='pages/page1.html'" role="button">compteur de cookie'z</button>
+          </div>
     </body>
 </html>
