--- a/html/uploading.html
+++ b/html/uploading.html
@@ -5,7 +5,7 @@
     <title>Multipart Form Data</title>
   </head>
   <body>
-    <form action="" method="POST" enctype="multipart/form-data">
+    <form action="http://localhost:8080/" method="POST" enctype="multipart/form-data">
      <h4>Browse your file</h4>
        <input type="file" name="file"/> <br><br>
        <input type="submit" value="Upload File"/>
