--- a/html/index.html
+++ b/html/index.html
@@ -71,9 +71,9 @@
             <div class="gap-10"></div> 
             <button class="button-74" onclick="location.href='pages/page1.html'" role="button">nos supers photos</button>
             <div class="gap-10"></div>
-            <button class="button-74" onclick="location.href='pages/page1.html'" role="button">toi aussi upload ta pic !</button>
+            <button class="button-74" onclick="location.href='pages/uploading.html'" role="button">toi aussi upload ta pic !</button>
             <div class="gap-10"></div> 
-            <button class="button-74" onclick="location.href='pages/page1.html'" role="button">compteur de cookie'z</button>
+            <button class="button-74" onclick="location.href='cgi/cookies_counter.php'" role="button">compteur de cookie'z</button>
           </div>
     </body>
 </html>
