fixing a lot of stuff

--- a/html/cgi/form_query_string.html
+++ b/html/cgi/form_query_string.html
@@ -4,7 +4,7 @@
         <title>WEBSERV</title>
     </head>
     <body>
-		<form action="cgi/query_string.pl" method="get">
+		<form action="query_string.pl" method="get">
 			<input type="name" id="name" name="name">
 			<input type="submit" value="Submit">
 		</form>
