--- a/html/cgi/postform.html
+++ b/html/cgi/postform.html
@@ -1,4 +1,4 @@
-<form action="cgi/post_form.php" method="POST">
+<form action="query_string.pl" method="POST">
     <label>Last Name : </label></br>
     <input class="input" name="last_name" id="name" required>
     <br>
